--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
      <link rel="stylesheet" href="styles/style.css">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="work-sans-font">
+        <nav class="navbar">
+            <h3 class="brand">G3 Architects</h3>
+
+        </nav>
 
     </header>
 
