--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
                     </div>
-                    <div>
+                    <div class="featured-architec">
                         <img src="images/architect.png" alt="">
                         <button id="experience-badge" class="btn-primary">
                             <span id="experience-year">10+ Years</span> <br>
@@ -153,8 +153,8 @@
 
     </main>
 
-    <footer>
-        
+    <footer class="footer-section bg-light">
+        <p class="text-light-gray">All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
 </html>
